# pr-reviewer

./: .gitignore  README.md  SETUP.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: code-review.yml  example-demo-workflow.yml  tests.yml
agent/: __init__.py  review_agent.py
diagrams/: data-flow.md  state-machine.md  system-architecture.md
docs/: architecture.md  chromadb-github-actions.md  chromadb-integration.md  chromadb-setup.md  pipeline-options.md  review-workflow.md  setup-demo-project.md  state-machine.md  stub-data-format.md  token-handling.md
mcp_servers/: __init__.py  chromadb_service.py  confluence_server.py  github_server.py  jira_server.py
scripts/: ingest_confluence.py
tests/: __init__.py  conftest.py  test_app.py  test_chromadb_service.py  test_confluence_server.py  test_github_server.py  test_jira_server.py  test_review_agent.py
tests/integration/: __init__.py  test_end_to_end.py
